--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,63 @@
 body {
-  margin: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: lightgrey;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: "Courier New",
     sans-serif;
+  font-weight: bolder;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.board {
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.new-game {
+	background-color: #55bb55;
+	color: white;
+	margin-left: 40px;
+	padding: 10px;
+	cursor: pointer;
+	border-radius: 9px;
+}
+.new-game:hover {
+	opacity: 0.5;
+}
+
+.next {
+	display: flex;
+    align-items: center;
+    margin-left: 25px;
+}
+
+.block {
+	margin-top: 6px;
+	color: #06202d;
+	border-radius: 5px;
+	height: 80px;
+	width: 80px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	opacity: 0.7;
+	font-size: 30px;
+}
+.block.red {
+	background-color: #bb5555;
+	color: white;
+}
+.block.blue {
+	background-color: #5555bb;
+	color: white;
+}
+.block.grey {
+	background-color: darkgrey;
+}
+.block.white {
+	background-color: white;
 }
